--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "Carnewal",
   "dependencies": {
     "three": "^0.79.0",
-    "three-obj-loader": "^1.0.2",
-    "whitestormjs": "^0.11.0"
+    "whitestormjs": "git://github.com/WhitestormJS/whitestorm.js.git#dev"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
